--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-charts": "^0.0.1",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
